bk_ida/gobmkida/c0/purge_persistent_reading_cache
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/purge_persistent_reading_cache/src/engine/persistent.c:684:6: error: use of undeclared identifier 'purge_persistent_reading_cache_last_purge_position_number'
if ( purge_persistent_reading_cache_last_purge_position_number != position_number ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/purge_persistent_reading_cache/src/engine/persistent.c:686:1: error: use of undeclared identifier 'purge_persistent_reading_cache_last_purge_position_number'
purge_persistent_reading_cache_last_purge_position_number = position_number; 
^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/purge_persistent_reading_cache/src/engine/persistent.c:717:9: error: use of undeclared identifier 'reading_cache'
sizeof( reading_cache)); 
        ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/purge_persistent_reading_cache/src/obj/1/persistent.o] Error 1
